# mcp-standard-bots

./: .env.example  LICENSE  README.md  pyproject.toml
mcp_standard_bots/: __init__.py  main.py  server.py
